fix compile for openssl 1.0.x w/ --with-ssl-engine

bz#2921, patch from cotequeiroz